cmake_minimum_required(VERSION 3.10)
project(websockets)
add_library(websockets src/websockets.c src/handshake.c src/frame.c)
target_include_directories(websockets PUBLIC include)
target_link_libraries(websockets event crypto)
install(TARGETS websockets DESTINATION lib)
install(DIRECTORY include/websockets DESTINATION include)